Added information about college degrees to about me section.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Taras Gorbachevskiy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,18 +46,27 @@
 				<!-- One -->
 				<section id="one" class="wrapper style3 fade-up">
 					<div class="inner">
-						<h2>What we do</h2>
-						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+						<h2>What I'm about</h2>
 						<div class="features">
 							<section>
 								<span class="icon solid major fa-code"></span>
-								<h3>Lorem ipsum amet</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								<h3>AAS-T IT-SYSTEMS AND SECURITY</h3>
+								<p>
+									This is an associates degree that I achieved at Green River College in Spring of 2019.
+									Here is where I took a lot of basic programming classes where I was gained more
+									proficiency in Java and basic website structure as well as elementary
+									computer knowledge and networking.</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-lock"></span>
-								<h3>Aliquam sed nullam</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								<h3>BAS IT-SOFTWARE DEVELOPMENT</h3>
+								<p>
+									This is the degree that I am currently working towards at Green River College. This
+									will conclude in June 2021 however I have at this point taken any classes that are
+									related to software development such as Data Structures, Algorithms, Design Patterns, etc.
+									Throughout the courses I've taken, I've become well versed in the LAMP stack and am
+									comfortable with MVC and modern technologies like Spring, Thymeleaf, etc.
+								</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-cog"></span>
