Moved info to next section.

--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
 									This is the degree that I am currently working towards at Green River College. This
 									will conclude in June 2021 however I have at this point taken any classes that are
 									related to software development such as Data Structures, Algorithms, Design Patterns, etc.
-									Throughout the courses I've taken, I've become well versed in the LAMP stack and am
-									comfortable with MVC and modern technologies like Spring, Thymeleaf, etc.
 								</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-cog"></span>
-								<h3>Sed erat ullam corper</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								<h3>CONTINUE HERE</h3>
+								<p>
+									Throughout the courses I've taken, I've become well versed in the LAMP stack and am
+									comfortable with MVC and modern technologies like Spring, Thymeleaf, etc.
+								</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-desktop"></span>
