Added info for technologies and certifications. Removed 2 extras entries.

--- a/index.html
+++ b/index.html
@@ -68,27 +68,21 @@
 							</section>
 							<section>
 								<span class="icon solid major fa-cog"></span>
-								<h3>CONTINUE HERE</h3>
+								<h3>Technologies</h3>
 								<p>
 									Throughout the courses I've taken, I've become well versed in the LAMP stack and am
-									comfortable with MVC and modern technologies like Spring, Thymeleaf, etc.
+									comfortable with MVC and modern technologies like Spring, Thymeleaf, etc. On my own
+									Along with the languages mentioned before I have done small projects in C# stack and
+									React Native.
 								</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-desktop"></span>
-								<h3>Veroeros quis lorem</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								<h3>Certifications</h3>
+								<p>-	 IT-WEB APPLICATION DEV</p>
+								<p>-	INFO TECH FUNDAMENTALS</p>
 							</section>
-							<section>
-								<span class="icon solid major fa-link"></span>
-								<h3>Urna quis bibendum</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-							</section>
-							<section>
-								<span class="icon major fa-gem"></span>
-								<h3>Aliquam urna dapibus</h3>
-								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-							</section>
+
 						</div>
 						<ul class="actions">
 							<li><a href="generic.html" class="button">Learn more</a></li>
