--- a/index.html
+++ b/index.html
@@ -84,9 +84,6 @@
 							</section>
 
 						</div>
-						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn more</a></li>
-						</ul>
 					</div>
 				</section>
 
@@ -162,18 +159,12 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="mailto:gorbataras@gmail.com">GorbaTaras@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<a href="tel:+1206-613-9624">206-613-9624</a>
 										</li>
 										<li>
 											<h3>Social</h3>
